@@ -3,7 +3,7 @@
     <ul id="act-nav" class="clear">
       <li><%= link_to "New template", url_for_theme(:controller => 'design') %></li>
       <li><%= link_to "Manage themes", :controller => 'themes' %></li>
-    <% if @theme.templates.custom.include?(@tmpl.basename.to_s) -%>
+    <% if @theme.templates.custom(@theme.extension).include?(@tmpl.basename.to_s) -%>
       <li><%= link_to 'Delete this file', url_for_theme(:action => 'remove', :filename => @tmpl.basename), 
                 :confirm => "Are you sure you want to delete #{@tmpl.basename}?\nThis action can't be undone!" %></li>
     <% end -%>
