@@ -4,8 +4,9 @@ class ArticleDropTest < Test::Unit::TestCase
   fixtures :sites, :sections, :contents, :assigned_sections, :users, :tags, :taggings, :assigned_assets, :assets
   
   def setup
+    @context = mock_context('site' => sites(:first).to_liquid)
     @article = contents(:welcome).to_liquid(:mode => :single)
-    @article.context = mock_context('site' => sites(:first).to_liquid)
+    @article.context = @context
   end
 
   def test_equality
@@ -68,6 +69,26 @@ class ArticleDropTest < Test::Unit::TestCase
     a = contents(:welcome).to_liquid
     assert_equal "<p>body</p>", a.send(:body_for_mode, :single)
     assert_equal '<p>body</p>', a.send(:body_for_mode, :list)
+  end
+
+  def test_find_next
+    another = contents(:another).to_liquid
+    another.context = @context
+    cupcake_welcome = contents(:cupcake_welcome).to_liquid
+    cupcake_welcome.context = @context
+
+    assert_equal another.next, contents(:site_map).to_liquid
+    assert_equal another.next(sections(:home).to_liquid), contents(:welcome).to_liquid
+    assert_equal cupcake_welcome.next(sections(:cupcake_home).to_liquid), nil
+  end
+
+  def test_should_find_previous
+    another = contents(:another).to_liquid
+    another.context = @context
+
+    assert_equal another.previous, contents(:at_beginning_of_next_month).to_liquid
+    assert_equal another.previous(sections(:home).to_liquid), nil
+    assert_not_equal another.previous(sections(:cupcake_home).to_liquid), contents(:at_beginning_of_next_month).to_liquid
   end
   
   specify "should show article url" do
